--- a/РасчетГСМ/Properties/Resources.resx
+++ b/РасчетГСМ/Properties/Resources.resx
@@ -118,11 +118,8 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="gas_pump" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\gas_pump.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="dollars" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\dollars.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="2784208_finance_business_money_coin_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\2784208_finance_business_money_coin_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="camaro_car_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\camaro_car_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -130,7 +127,31 @@
   <data name="ruble_money" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ruble_money.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="8673344_ic_fluent_gas_filled_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\8673344_ic_fluent_gas_filled_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="highway" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\highway.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="825448_automobile_cars_magnifying glass_search_searchicons_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\825448_automobile_cars_magnifying glass_search_searchicons_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="2501873_fuel_fuel full_meter_gas_gasoline_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\2501873_fuel_fuel full_meter_gas_gasoline_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dollars" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dollars.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="gas_pump" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\gas_pump.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="auto_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\auto_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="9652709_asphalt_highway_journey_road_street_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\9652709_asphalt_highway_journey_road_street_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="9025790_gas_pump_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\9025790_gas_pump_icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
